# ai-game-1

./: .gitignore  CMakeLists.txt
src/: AIGame1.cpp  AIGame1.h  CMakeLists.txt  EnemyAttackBehaviours.cpp  EnemyAttackBehaviours.h  EnemyBehaviours.cpp  EnemyBehaviours.h  EnemyEvadeBehaviours.cpp  EnemyEvadeBehaviours.h  EnemyWanderBehaviours.cpp  EnemyWanderBehaviours.h  PlayerPositionChangeSubscriber.cpp  PlayerPositionChangeSubscriber.h  Predefines.h  main.cpp
src/Agents/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  Wall.cpp  Wall.h
src/Behaviours/: Alignment.h  Arrive.cpp  Arrive.h  BehaviourInterface.h  BehavioursData.h  BehavioursDataAwareInterface.h  Cohesion.h  Evade.cpp  Evade.h  Flee.cpp  Flee.h  GroupBehaviours.h  Hide.cpp  Hide.h  ObstacleAvoidance.cpp  ObstacleAvoidance.h  Pursuit.cpp  Pursuit.h  Seek.cpp  Seek.h  Separation.h  Wander.cpp  Wander.h
src/Dynamics/: SteeringBehaviourStrategy.cpp  SteeringBehaviourStrategy.h
src/Events/: CheckEnemyTriggerEvent.h  EnemyEnemyCollisionEvent.h  EnemyWallCollisionEvent.h  PlayerEnemyCollisionEvent.h  PlayerMarkerChangeEvent.h  PlayerPositionChangeEvent.h  PlayerWallCollisionEvent.h
src/Repositories/: AgentRepository.cpp  AgentRepository.h
src/Subscribers/: CheckEnemyTriggerSubscriber.cpp  CheckEnemyTriggerSubscriber.h  EnemyAttackSubscriber.cpp  EnemyAttackSubscriber.h  EnemyCollisionSubscriber.cpp  EnemyCollisionSubscriber.h  PlayerCollisionSubscriber.cpp  PlayerCollisionSubscriber.h  PlayerMovementSubscriber.cpp  PlayerMovementSubscriber.h  PlayerShotSubscriber.cpp  PlayerShotSubscriber.h  PlayerWallCollisionSubscriber.h
